--- a/src/app/pages/e-commerce/components/dynamicWidgets/dynamicWidgets.component.html
+++ b/src/app/pages/e-commerce/components/dynamicWidgets/dynamicWidgets.component.html
@@ -1,17 +1,19 @@
 <div class="toolbar">
-  <button nbButton (click)="dynamicWidgetsService.addwidgetA()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget A</button>
-  <button nbButton (click)="dynamicWidgetsService.addwidgetB()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget B</button>
-  <button nbButton (click)="dynamicWidgetsService.addwidgetC()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget C</button>
+  <button nbButton (click)="dynamicWidgetsService.addwidgetA()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget .log</button>
+  <button nbButton (click)="dynamicWidgetsService.addwidgetB()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget CPU</button>
+  <button nbButton (click)="dynamicWidgetsService.addwidgetC()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget Mem</button>
+  <button nbButton (click)="dynamicWidgetsService.addwidgetD()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget Uptime</button>
 </div>
 
-<gridster [options]="options" class = "grid">
-  <gridster-item [item]="item" *ngFor="let item of dashboard" class = "griditem">
-      <nb-card-body>
-        <button nbButton class="remove-button" (click)="dynamicWidgetsService.deleteItem(item.id)">
-          <nb-icon icon="close-square-outline"></nb-icon>
-          Delete Item
-        </button>
-        <app-parent-dynamic [widget]="item" [resizeEvent]="resizeEvent"></app-parent-dynamic>
-      </nb-card-body>
-  </gridster-item>
-</gridster>
+
+    <gridster [options]="options" class = "grid">
+      <gridster-item [item]="item" *ngFor="let item of dashboard" class = "griditem">
+          <nb-card-body>
+            <button nbButton class="remove-button" (click)="dynamicWidgetsService.deleteItem(item.id)">
+              <nb-icon icon="close-square-outline"></nb-icon>
+              Delete Item
+            </button>
+            <app-parent-dynamic [widget]="item" [resizeEvent]="resizeEvent"></app-parent-dynamic>
+          </nb-card-body>
+      </gridster-item>
+    </gridster>
