--- a/src/app/pages/e-commerce/components/dynamicWidgets/parentDynamic.component.html
+++ b/src/app/pages/e-commerce/components/dynamicWidgets/parentDynamic.component.html
@@ -1,3 +1,4 @@
 <app-widget-a [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetA'"></app-widget-a>
 <app-widget-b [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetB'"></app-widget-b>
 <app-widget-c [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetC'"></app-widget-c>
+<app-widget-d [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetD'"></app-widget-d>
