widgets added & link changed

--- a/src/app/pages/main-page/components/dynamicWidgets/dynamicWidgets.component.html
+++ b/src/app/pages/main-page/components/dynamicWidgets/dynamicWidgets.component.html
@@ -1,8 +1,8 @@
 <div class="toolbar">
-  <button nbButton (click)="dynamicWidgetsService.addwidgetA()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget .log</button>
-  <button nbButton (click)="dynamicWidgetsService.addwidgetB()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget CPU</button>
-  <button nbButton (click)="dynamicWidgetsService.addwidgetC()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget Mem</button>
-  <button nbButton (click)="dynamicWidgetsService.addwidgetD()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget Uptime</button>
+  <button nbButton (click)="dynamicWidgetsService.addWidgetLog()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget .log</button>
+  <button nbButton (click)="dynamicWidgetsService.addWidgetCPU()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget CPU</button>
+  <button nbButton (click)="dynamicWidgetsService.addWidgetRAM()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget RAM</button>
+  <button nbButton (click)="dynamicWidgetsService.addWidgetUptime()"><nb-icon icon="plus-circle-outline"></nb-icon>add widget Uptime</button>
 </div>
 
 
