--- a/src/app/pages/main-page/components/dynamicWidgets/dynamicWidgets.component.scss
+++ b/src/app/pages/main-page/components/dynamicWidgets/dynamicWidgets.component.scss
@@ -17,7 +17,8 @@
     flex: auto;
 }
 button {
-    height: 30px;
+    height: auto;
+    width: auto;
     text-align: center;
     margin: 5px;
     display: flex;
