--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -5,12 +5,14 @@
     <button nbButton (click)="addNewTab()" style="background: white">Add new tab</button>
 
     <nb-tabset fullWidth style="background: white" >
-      <nb-tab *ngFor="let tab of tabs; let tabIndex = index" tabTitle="Tab {{tabIndex+1}}" >
+      <nb-tab *ngFor="let tab of tabs; let tabIndex = index" tabTitle="Tab {{tabIndex+1}}">
           <button nbButton (click)="removeTab(tabIndex);" style="background: #edf1f7">
             <nb-icon icon="close-square-outline"></nb-icon>
             Delete Tab {{tabIndex + 1}}
           </button>
-          <app-dynamic-widgets></app-dynamic-widgets>
+        <div class="tab{{tabIndex + 1}}">
+          <app-dynamic-widgets id="tabIndex+1" [test]=(tabIndex+1)></app-dynamic-widgets>
+        </div>
       </nb-tab>
 
     </nb-tabset>
