--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,8 +1,5 @@
 <div class="header-container">
-    <a class="logo" href="#" (click)="navigateHome()">ngx-admin widget dashboard</a>
-  <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
-    <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
-  </nb-select>
+    <a class="logo" href="#" (click)="navigateHome()">AMMO Widget Dashboard</a>
 </div>
 
 <div class="header-container">
