--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -5,6 +5,11 @@
     <button nbButton (click)="addNewTab()" style="background: white">Add new tab</button>
 
     <nb-tabset fullWidth style="background: white" >
+      <nb-tab tabTitle="Main Tab">
+        <div class="main-tab">
+          <app-dynamic-widgets></app-dynamic-widgets>
+        </div>
+      </nb-tab>
       <nb-tab *ngFor="let tab of tabs; let tabIndex = index" tabTitle="Tab {{tabIndex+1}}">
           <button nbButton (click)="removeTab(tabIndex);" style="background: #edf1f7">
             <nb-icon icon="close-square-outline"></nb-icon>
