--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -3,20 +3,18 @@
   <nb-layout-column>
 
     <button nbButton (click)="addNewTab()" style="background: white">Add new tab</button>
+    <button nbButton (click)="saveAll()" style="background: white">Save all tabs</button>
+    <button nbButton (click)="clearAll()" style="background: white">Clear all tabs</button>
+    <button nbButton (click)="loadSavedTabs()" style="background: white">Load saved tabs</button>
 
     <nb-tabset fullWidth style="background: white" >
-      <nb-tab tabTitle="Main Tab">
-        <div class="main-tab">
-          <app-dynamic-widgets></app-dynamic-widgets>
-        </div>
-      </nb-tab>
       <nb-tab *ngFor="let tab of tabs; let tabIndex = index" tabTitle="Tab {{tabIndex+1}}">
           <button nbButton (click)="removeTab(tabIndex);" style="background: #edf1f7">
             <nb-icon icon="close-square-outline"></nb-icon>
             Delete Tab {{tabIndex + 1}}
           </button>
         <div class="tab{{tabIndex + 1}}">
-          <app-dynamic-widgets id="tabIndex+1" [test]=(tabIndex+1)></app-dynamic-widgets>
+          <app-dynamic-widgets id={{tabIndex+1}} [test]=(tabIndex)></app-dynamic-widgets>
         </div>
       </nb-tab>
 
