--- a/src/app/pages/main-page/components/dynamicWidgets/parentDynamic.component.html
+++ b/src/app/pages/main-page/components/dynamicWidgets/parentDynamic.component.html
@@ -2,3 +2,4 @@
 <app-widget-cpu [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetCPU'"></app-widget-cpu>
 <app-widget-ram [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetRAM'"></app-widget-ram>
 <app-widget-uptime [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetUptime'"></app-widget-uptime>
+<app-widget-zabbix [widget]="widget" [resizeEvent]="resizeEvent" *ngIf="widget.type === 'widgetZabbix'"></app-widget-zabbix>
